compiler/tests/fixtures/negative/error_sema_assign.sol
// E1014: assignment type mismatch.
function start() -> int {
    let x: int = 5;
    x = 3.0;
    return x;
}
